--- a/package.json
+++ b/package.json
@@ -15,25 +15,35 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/next": "latest",
+    "@payloadcms/db-postgres": "latest",
+    "@payloadcms/next": "^3.2.2",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
+    "@types/cheerio": "^0.22.35",
+    "autoprefixer": "^10.4.20",
+    "cheerio": "^1.0.0",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.462.0",
     "next": "15.0.0",
+    "next-intl": "^3.25.3",
     "payload": "latest",
+    "postcss": "^8.4.49",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "sharp": "0.32.6",
-    "@payloadcms/db-postgres": "latest"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
-    "typescript": "5.7.2"
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
