--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "@types/cheerio": "^0.22.35",
-    "autoprefixer": "^10.4.20",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -29,20 +28,21 @@
     "next": "15.0.0",
     "next-intl": "^3.25.3",
     "payload": "latest",
-    "postcss": "^8.4.49",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "sharp": "0.32.6",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.15"
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
   },
   "engines": {
