--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "payload": "latest",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "sharp": "0.32.6",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
