--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.0",
     "next-intl": "^3.25.3",
-    "openai": "^4.73.1",
+    "openai": "^4.75.0",
     "payload": "latest",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "sharp": "^0.32.6",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
