--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@payloadcms/next": "^3.2.2",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/storage-s3": "^3.8.0",
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
