--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@payloadcms/next": "^3.2.2",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
-    "@payloadcms/storage-s3": "^3.8.0",
+    "@payloadcms/storage-s3": "^3.2.2",
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
@@ -31,6 +31,7 @@
     "next-intl": "^3.25.3",
     "openai": "^4.75.0",
     "payload": "latest",
+    "postgres": "^3.4.5",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "sharp": "^0.32.6",
