--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@payloadcms/db-mongodb": "^3.8.0",
     "@payloadcms/db-postgres": "latest",
     "@payloadcms/next": "^3.2.2",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/storage-s3": "^3.2.2",
+    "@payloadcms/storage-vercel-blob": "^3.8.0",
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
