--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.8",
     "@payloadcms/db-mongodb": "^3.8.0",
     "@payloadcms/db-postgres": "latest",
     "@payloadcms/next": "^3.2.2",
@@ -23,6 +24,7 @@
     "@payloadcms/storage-s3": "^3.2.2",
     "@payloadcms/storage-vercel-blob": "^3.8.0",
     "@types/cheerio": "^0.22.35",
+    "ai": "^4.0.20",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
