--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@payloadcms/storage-s3": "^3.2.2",
     "@payloadcms/storage-vercel-blob": "^3.8.0",
     "@types/cheerio": "^0.22.35",
+    "@types/markdown-it": "^14.1.2",
     "ai": "^4.0.20",
     "cheerio": "^1.0.0",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "graphql": "^16.8.1",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.462.0",
+    "markdown-it": "^14.1.0",
     "next": "15.0.0",
     "next-intl": "^3.25.3",
     "openai": "^4.75.0",
