--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "15.0.0",
     "next-intl": "^3.25.3",
     "openai": "^4.75.0",
+    "patternomaly": "^1.3.2",
     "payload": "latest",
     "postgres": "^3.4.5",
     "react": "19.0.0-rc-65a56d0e-20241020",
@@ -55,6 +56,7 @@
     "eslint-config-next": "15.0.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "tailwindcss-bg-patterns": "^0.3.0",
     "typescript": "^5.7.2"
   },
   "engines": {
