--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.8",
+    "@next/third-parties": "^15.1.2",
     "@payloadcms/db-mongodb": "^3.8.0",
     "@payloadcms/db-postgres": "latest",
     "@payloadcms/next": "^3.2.2",
