--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.0.8",
+    "@mozilla/readability": "^0.5.0",
     "@next/third-parties": "^15.1.2",
     "@payloadcms/db-mongodb": "^3.8.0",
     "@payloadcms/db-postgres": "latest",
@@ -25,6 +26,7 @@
     "@payloadcms/storage-s3": "^3.2.2",
     "@payloadcms/storage-vercel-blob": "^3.8.0",
     "@types/cheerio": "^0.22.35",
+    "@types/jsdom": "^21.1.7",
     "@types/markdown-it": "^14.1.2",
     "ai": "^4.0.20",
     "cheerio": "^1.0.0",
@@ -32,6 +34,7 @@
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "ioredis": "^5.4.1",
+    "jsdom": "^25.0.1",
     "lucide-react": "^0.462.0",
     "markdown-it": "^14.1.0",
     "next": "15.0.0",
